correct mobile sizing max, remove layout of info page for correction on mobile

--- a/about.css
+++ b/about.css
@@ -103,35 +103,7 @@ ul li {
     visibility: visible;
 }
 
-.info {
-    position: relative;
-    display: flex;
-    flex: 4;
-    flex-flow: wrap;
-    padding-top: 15px;
-    justify-content: space-around;
-}
-
-.bio {
-    font-family: "Space Mono";
-    font-size: 12px;
-    width: 50%;
-    height: 25%;
-    padding-right: 20px;
-}
-
-.bio-pic {
-    width: 50%;
-    padding-right: 20px;
-}
-
-.contact-form {
-    width: 100%;
-    position: absolute;
-    top: 30%;
-       
-}
-
+/* MEDIA QUERIES */
 @media screen and (min-width: 800px) {
     aside {
         position: relative;
@@ -158,7 +130,7 @@ ul li {
     }
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 799px) {
     aside {
         margin-bottom: 5px;
         order: 0;
@@ -216,6 +188,7 @@ ul li {
         text-align: center;
     }
 }
+/*----------------------------------------*/
 
 footer {
     margin-top: 10px;
