--- a/index.css
+++ b/index.css
@@ -154,6 +154,7 @@ ul li {
     opacity: 1;
 }
 
+/* MEDIA QUERIES */
 @media screen and (min-width: 800px) {
     aside {
         position: relative;
@@ -199,7 +200,7 @@ ul li {
 }
 }
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 799px) {
     aside {
         margin-bottom: 5px;
         order: 0;
@@ -257,6 +258,7 @@ ul li {
         text-align: center;
     }
 }
+/*--------------------------------------------*/
 
 footer {
     margin-top: 10px;
